<<<<<<< HEAD
[gd_scene load_steps=3 format=3 uid="uid://baijsmpgbb8eu"]
=======
[gd_scene load_steps=3 format=3 uid="uid://demuw4ay0rlr8"]
>>>>>>> main

[ext_resource type="Script" path="res://intro_text.gd" id="1_fgnoi"]

[sub_resource type="LabelSettings" id="LabelSettings_uwcoc"]
font_size = 25
outline_size = 3
outline_color = Color(0.603922, 0.129412, 0, 1)

[node name="Introduction_node" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.0117647, 0.00392157, 1)

[node name="intro_label" type="Label" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0442708
anchor_top = 0.0771605
anchor_right = 0.94184
anchor_bottom = 0.87037
grow_vertical = 2
text = "dfsdgafdaf f f  afg a 
ewfwef
wef

wfe"
label_settings = SubResource("LabelSettings_uwcoc")
script = ExtResource("1_fgnoi")
metadata/_edit_use_anchors_ = true

[node name="text_speed_timer" type="Timer" parent="CanvasLayer/ColorRect/intro_label"]

[node name="stay_on_screen_timer" type="Timer" parent="CanvasLayer/ColorRect/intro_label"]

[connection signal="timeout" from="CanvasLayer/ColorRect/intro_label/text_speed_timer" to="CanvasLayer/ColorRect/intro_label" method="_on_text_speed_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/ColorRect/intro_label/stay_on_screen_timer" to="CanvasLayer/ColorRect/intro_label" method="_on_stay_on_screen_timer_timeout"]
